--- a/Hive/Hive.csproj
+++ b/Hive/Hive.csproj
@@ -47,7 +47,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon3.ico</ApplicationIcon>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -208,6 +208,7 @@
     <None Include="Resources\access.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="icon.ico" />
     <Content Include="icon3.ico" />
     <None Include="Resources\cmd.ico" />
     <None Include="Resources\icon.ico" />
